--- a/frontend/locales/en.yml
+++ b/frontend/locales/en.yml
@@ -1,6 +1,6 @@
 en:
   archival_object:
-    cuid: Collection Unique Identifier
+    component_id_auto_generation_message: -- auto-generated upon save -- 
   validation_errors:
     is_already_taken: is already taken.
     has_already_been_used: has already been used.
